# wilson-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backend-ci.yml  ci.yml  dependency-audit.yml  deployment-ci.yml  gh-pages.yml  infra-ci.yml  live-smoke.yml  pages.yml  pages.yml.bak_20260124_120431  release-check.yml  security-baseline.yml  verification-ci.yml
api/: run_dev.sh
api/app/: main.py
assets/: index-CuhCO08Y.css  index-rCcivuxc.js
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  middleware.py  models.py  rate_limit.py  runtime.py  schemas.py  security.py
backend/app/routers/: __init__.py  auth.py  resources.py  system.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_hardening.py  test_inventory.py  test_operations.py
deploy/: .env.example  Caddyfile  README.md  compose.yaml
deploy/scripts/: backup.sh  preflight.sh  prepare-secrets.sh  restore.sh  show-credentials.sh
docs/: API.md  ARCHITECTURE.md  BUILD_LOG.md  BUILD_LOG.md.bak_20260124_120431  CASE_STUDY.md  CODE_REVIEW_CHECKLIST.md  DECISIONS.md  DEMO_SCRIPT.md  DEPLOYMENT.md  LIVE_VERIFICATION.md  RELEASE_PROCESS.md  SECURITY.md  SETUP_LOCAL.md  THREAT_MODEL.md
frontend/: .env.example  package.json  vite.config.ts
mock/: resources.json
scripts/: install-git-hooks.sh
tools/: render_evidence.py  verify_live.py
(+39 files in other folders)
