[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "wilson-lab-api"
version = "0.2.0"
description = "Secure control-plane API for the Wilson Lab showcase."
requires-python = ">=3.12"
dependencies = [
  "docker==7.1.0",
  "fastapi==0.139.2",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pwdlib[argon2]==0.3.0",
  "PyJWT==2.13.0",
  "python-multipart>=0.0.20,<1",
  "SQLAlchemy==2.0.51",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1",
  "pytest==9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
